# neural_nets

./: pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py
make_more/: imp_stuff.ipynb
make_more/.ipynb_checkpoints/: imp_stuff-checkpoint.ipynb
micro_grad/: nets.ipynb  torch_nets.ipynb
micro_grad/.ipynb_checkpoints/: nets-checkpoint.ipynb  torch_nets-checkpoint.ipynb
