[project]
name = "deep-nets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.8",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
]
